--- a/public/projects.html
+++ b/public/projects.html
@@ -129,10 +129,10 @@ Feb 2024
 
 							<p>
 								<strong>Question #1 : Explain what does it means Immutable infrastructure?</strong>
-								xxxxxxx xxxxxxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
+								Immutable Infrastructure refers to a model of managing IT resources where components (such as servers, virtual machines, 
+                                				or containers) are not modified after they are deployed. Instead of making changes to existing components, new versions are
+                               					created and deployed, effectively replacing the old ones.
+
 							</p>
 
 							<div class="border-start border-primary border-3 py-1 px-3 my-5">
@@ -143,10 +143,9 @@ Feb 2024
 							<p>
 								<strong>Question #2 : Explain the next command: <br> $docker exec -it Ubuntu
 									/bin/bash</strong>
-								xxxxxxx xxxxxxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
-								xxxxx xxxx, xxxx x xxxxxxxx
+								Is used to open an interactive Bash shell inside a running Docker container named "ubuntu". This allows you to execute 
+                                    				cd commands directly in that container's environment.
+
 							</p>
 
 							<div class="mt-5">
